Updates as on 20Oct