@@ -2,6 +2,7 @@ package com.cs.arris.Pages;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.support.PageFactory;
@@ -25,6 +26,7 @@ public class ConnectToWifiUsingRouterSSID extends ParentClass
 	public TestUtils utils = new TestUtils();
 	public String ssid;
 	public String pwd;
+	public String udid;
 	
 	public void turnOnRouterWifi(String ssid, String pwd)
 	{
@@ -32,11 +34,37 @@ public class ConnectToWifiUsingRouterSSID extends ParentClass
 		this.pwd = pwd;
 		Capabilities cap = getDriver().getCapabilities();
         try {
-            Runtime.getRuntime().exec("adb shell am start -n com.steinwurf.adbjoinwifi/.MainActivity -e ssid " + this.ssid + " -e password_type WPA -e password " + this.pwd);
-            pause(3);
-            Runtime.getRuntime().exec("adb shell input keyevent 3");
+        	//adb shell am start -n com.steinwurf.adbjoinwifi/.MainActivity -e ssid arrisw311 -e password_type WPA -e password 1234567890
+        	utils.log().info("Connecting to mAX Router " + this.ssid + " Home Network on " + cap.getCapability(MobileCapabilityType.UDID).toString() + " device" );
+        	Runtime.getRuntime().exec(new String[]{"bash", "-l", "-c", "adb -s" + cap.getCapability(MobileCapabilityType.UDID).toString() + "shell am start -n com.steinwurf.adbjoinwifi/.MainActivity -e ssid " + this.ssid + " -e password_type WPA -e password " + this.pwd});
+        	super.pause(5);
+        	Runtime.getRuntime().exec(new String[]{"bash", "-l", "-c", "adb -s" + cap.getCapability(MobileCapabilityType.UDID).toString() + "shell input keyevent 3"});
+            utils.log().info("Connected to mAX Router " + this.ssid + " Home Network on " + cap.getCapability(MobileCapabilityType.UDID).toString() + " device" );
         } catch (IOException e) {
             e.printStackTrace();
         }
 	}
+	
+	//Tested																										
+	public void turnOnMaxRouterWifi(String ssid, String pwd, String udid)
+	{
+		this.ssid = ssid;
+		this.pwd = pwd;
+		this.udid = udid;
+       
+        try {
+        	ProcessBuilder pb1 = new ProcessBuilder("/opt/homebrew/bin/adb", "-s", this.udid, "shell", "am", "start", "-n", "com.steinwurf.adbjoinwifi/.MainActivity", "-e", "ssid", this.ssid, "-e", "password_type", "WPA", "-e", "password", this.pwd);
+        	Process pc1 = pb1.start();
+            pc1.waitFor(5, TimeUnit.SECONDS);
+            ProcessBuilder pb2 = new ProcessBuilder("/opt/homebrew/bin/adb", "-s", this.udid, "shell", "input", "keyevent", "3");
+            Process pc2 = pb2.start();
+            pc2.waitFor(5, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            e.printStackTrace();
+		}
+	}
 }
+
+
+
+
